# conesnake

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  entrypoint_prod.sh  example.env  notes.md  requirements.txt  results.txt
.cargo/: config.toml
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
gpu/: .devcontainer.json  CMakeLists.txt  Dockerfile  Makefile  gen_board.cu
k8s/: cloud-provider-aws.yaml
k8s/conesnake/: Chart.yaml  values-secrets.yaml.template  values.secrets.yaml.template  values.yaml
k8s/conesnake/templates/: _helpers.tpl  auth.yaml  conesnake.yaml  ecr-creds.yaml  ingress.yml  ip-change.yaml  secrets.yaml  services.yaml
rules/: go.mod  go.sum  move.go
rules/move/: move.go
scripts/: entrypoint.sh  entrypoint_relay.sh  entrypoint_rules.sh  ip_change.sh  optimize.py  play_games.py
src/: api.rs  board.rs  config.rs  delay.rs  game.rs  gpu_move.rs  kubectl.rs  lib.rs  log.rs  pool.rs  rand.rs  search.rs  server.rs  tests.rs  util.rs
src/benches/: benchmark.rs
src/board/: board_rules.rs  board_simd.rs  board_str.rs  board_test.rs  gen_board_test.rs
src/search/: search_test.rs
src/tests/: common.rs  ref_move.rs
submodules/board/: Dockerfile
submodules/snork/: Dockerfile
terraform/: .terraform.lock.hcl  ci.tf  conesnake.tf  iam.tf  k3s.tf  main.tf  monitoring.tf  vars-secrets.tf.template  vars.tf.template
terraform/aws/: iam.tf  infra.tf  main.tf  monitoring.tf  vars.tf
terraform/gcp/: iam.tf  infra.tf  main.tf  vars.tf
terraform/k3s/: create.sh  delete.sh  k3s.sh
terraform/k3s-mesh/: create_mesh.sh  destroy_mesh.sh  k3s.sh  k3s.tf  main.tf  traefik-config.yaml  vars.tf
terraform/node/: node.tf
terraform/wg-mesh/: create.sh  create_mesh.sh  delete.sh  destroy_mesh.sh
tests/: server_test.rs
tests/data/: start_basic_game.json
