[package]
name = "conesnake"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "conesnake"
path = "./src/bin/conesnake.rs"

[[bin]]
name = "performance"
path = "./src/bin/performance.rs"

[dependencies]
axum = "~0.7"
futures = "~0.3"
reqwest = { version = "~0.11", features = ["json"] }
ctrlc = {version = "~3.4", features = ["termination"] }
tokio = { version = "~1.35", features = ["full"] }
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
tower-http = { version = "~0.5", features = ["trace"] }
crossbeam-channel = "~0.5"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
packed_simd = "~0.3"
rand = { version = "~0.8", features = ["small_rng"] }
clap = { version = "~4.4", features = ["derive"] }
log = "~0.4"
env_logger = "~0.10"
deepsize = "~0.2"
nix = "~0.27"

[dev-dependencies]
approx = "~0.5"
pretty_assertions = "~1.4"
cargo-show-asm = "~0.2"

[features]
default = ["simd"]
simd = []

[profile.release]
lto = "thin"

[profile.release-with-debug]
inherits = "release"
debug = true
