cargo-features = ["profile-rustflags"]

[package]
name = "conesnake"
version = "0.3.0"
edition = "2024"
autobins = false

[[bin]]
name = "conesnake"
path = "./src/bin/conesnake.rs"
test = false
bench = false

[[bench]]
name = "benchmark"
path = "./src/benches/benchmark.rs"

[dependencies]
axum = "~0.8"
futures = "~0.3"
reqwest = { version = "~0.12", features = ["json"] }
ctrlc = { version = "~3.4", features = ["termination"] }
tokio = { version = "~1.47", features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
] }
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
tower-http = { version = "~0.6", features = ["trace"] }
crossbeam-channel = "~0.5"
crossbeam-utils = "~0.8"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
strum = "~0.27"
strum_macros = "~0.27"
rand = { version = "~0.9", features = ["small_rng"] }
clap = { version = "~4.5", features = ["derive"] }
log = "~0.4"
env_logger = "~0.11"
nix = { version = "~0.30", features = ["signal"] }

[dev-dependencies]
approx = "~0.5"
pretty_assertions = "~1.4"
cargo-show-asm = "~0.2.52"

[features]
default = ["simd"]
simd = ["rand/simd_support"]

[profile.release]
lto = "fat"
opt-level = 3
strip = "none"
panic = "abort"
codegen-units = 16
rustflags = ["-C", "target-cpu=znver3"]

[profile.release-relay]
inherits = "release"
rustflags = ["-C", "target-cpu=x86-64"]

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"
panic = "unwind"
